Fix card layout: prevent overflow from the container on smaller window

--- a/asstes/css/style.css
+++ b/asstes/css/style.css
@@ -32,7 +32,7 @@
 }
 
 .col-3 {
-  width:calc(100% /3);
+  width:calc((100% /3) - 2rem);
   height: auto;
 }
 
